<resources>
    <!-- commons -->
    <string name="app_name">Mission</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_nodata">There is no task</string>

    <!-- tab page name -->
    <string name="home_page">Tasks</string>
    <string name="assets_page">Your Banking</string>
    <string name="principles_page">Principles</string>
    <string name="book_page">Books</string>

    <!-- menu -->
    <string name="calendar">Calendar</string>
    <string name="setting">Setting</string>
    <string name="add_task">Add task</string>
    <string name="text_delete">Delete</string>

    <!-- fragment add task -->
    <string name="fragment_add_task_name_field">Title</string>
    <string name="fragment_add_task_content_field">Content</string>
    <string name="fragment_add_task_title">Add your task</string>
    <string name="fragment_text_add_task">Add task</string>
    <string name="fragment_text_priority">Priority</string>
    <string name="fragment_text_set_alarm">Set alarm</string>
    <string name="fragment_text_choose_day_in_week">Choose day in week</string>
    <string name="fragment_text_set_time_content">Time</string>
    <string name="daily_task">Daily task</string>
    <string name="single_day_task">Single day task</string>
    <string name="text_edit_task">Done</string>
    <string name="text_icon_image">Icon</string>
    <string name="text_change_icon_image">Tap to change icon</string>
    <string name="text_choose_icon">Choose your task icon</string>

    <!-- fragment add asset -->
    <string name="text_choose_icon_asset">Choose your asset icon</string>
    <string name="fragment_text_add_asset">Add asset</string>
    <string name="banking_text_footer">Your banking balance: </string>

    <!-- fragment add principle -->
    <string name="text_choose_icon_principle">Choose your principle icon</string>
    <string name="fragment_text_add_principle">Add principle</string>
    <string name="principle_text_footer">Your principle score: </string>

    <!-- fragment add book -->
    <string name="text_add_book">Add book</string>
    <string name="fragment_add_book_name_field">Book name</string>
    <string name="fragment_add_book_author_field">Author</string>

    <!-- header item -->
    <string name="text_task_list_setting">Task list</string>
    <string name="text_sort_by_time">Sort by time</string>
    <string name="text_sort_by_Priority">Sort by priority</string>
    <string name="text_setting">Setting</string>
    <string name="text_remain_time">Remain time for your day</string>
    <string name="text_no_task">There is no task</string>

    <string name="text_principle">Principle</string>

    <string-array name="dayOnWeek">
        <item>Monday</item>
        <item>Thursday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string name="link_icon">https://www.flaticon.com/search?word=plus</string>
    <string name="admob_app_id">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>

    <!-- google test -->
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>

</resources>
