<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_calendar"
        android:icon="@mipmap/calendar_icon"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_task"
        android:icon="@mipmap/add_task_icon"
        android:title="@string/add_task"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_asset"
        android:icon="@mipmap/icon_add_asset"
        android:title="@string/add_task"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_add_principle"
        android:icon="@mipmap/add_principle_icon"
        android:title="@string/fragment_text_add_principle"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_add_book"
        android:icon="@mipmap/icon_add_book"
        android:title="@string/text_add_book"
        app:showAsAction="always"
        android:visible="false"/>

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="About us"
        app:showAsAction="never" />

</menu>