<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/task_item_margin"
    android:layout_marginLeft="@dimen/task_item_margin"
    android:layout_marginRight="@dimen/task_item_margin"
    android:layout_marginStart="@dimen/task_item_margin"
    android:layout_marginTop="@dimen/task_item_margin"
    android:orientation="vertical">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sdfsdf" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_task_list_setting"
                android:textColor="@color/task_list_title"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/settingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:visibility="gone">

                <RadioGroup
                    android:id="@+id/radioSortType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioSortTypeTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/text_sort_by_time" />

                    <RadioButton
                        android:id="@+id/radioSortTypePriority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_sort_by_Priority" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/headerSettingBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@color/gray">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="@string/text_setting" />

                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/iconSettingBt"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/arrow_down" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>