<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_color_theme"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fragment_text_title_margin_left"
                    android:layout_marginStart="@dimen/fragment_text_title_margin_left"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_add_task_title"
                    android:textColor="@color/fragment_add_task_title_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/fragment_add_task_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fragment_text_title_margin_left"
                    android:layout_marginStart="@dimen/fragment_text_title_margin_left"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_add_task_content_field"
                    android:textColor="@color/fragment_add_task_title_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/fragment_add_task_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fragment_text_title_margin_left"
                    android:layout_marginStart="@dimen/fragment_text_title_margin_left"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_text_priority"
                    android:textColor="@color/fragment_add_task_title_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/fragment_add_task_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fragment_text_title_margin_left"
                    android:layout_marginStart="@dimen/fragment_text_title_margin_left"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_text_set_time_content"
                    android:textColor="@color/fragment_add_task_title_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/fragment_add_task_title" />

            </LinearLayout>
        </FrameLayout>

    </ScrollView>

</LinearLayout>